--- a/intro.html
+++ b/intro.html
@@ -7,6 +7,36 @@
    <title>Document</title>
 </head>
 <body>
+   <ul>
+         <li>tea</li>
+         <li>coffee</li>
+         <li>milk</li>
+      </ul>
+      <ol>
+         <li>coffee</li>
+         <li>tea</li>
+         <li>milk</li>
+      </ol>
+   <table>
+      <tr>
+         <th>company</th>
+      <th>contact</th>
+      <th>country</th>
+      </tr>
+      <tr>
+         <td>perfectscalesales&sevices</td>
+         <td>perfectscalesales</td>
+         <td>india</td>
+      </tr>
+      <tr>
+         <td>yahyapersonaltutionclasses</td>
+         <td>yahyaclasses</td>
+         <td>india</td>
+      </tr>
+
+  
+   </table>
+   </table>
    <h1>date of birth-29/07/2005</h1>
    <h2 style="color: rgb(255, 8, 8);">pincode-390019</h2>
    <pre> this is 
