--- a/intro.html
+++ b/intro.html
@@ -7,15 +7,16 @@
    <title>Document</title>
 </head>
 <body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p5yyaKloqMo?si=LC--Ju02v9k7SYrp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    <ul>
-         <li>tea</li>
-         <li>coffee</li>
-         <li>milk</li>
+         <li>panner chilli</li>
+         <li>ctandoori butter roti</li>
+         <li>buttermilk</li>
       </ul>
       <ol>
-         <li>coffee</li>
-         <li>tea</li>
-         <li>milk</li>
+         <li>burger</li>
+         <li>pizza</li>
+         <li>sandwich</li>
       </ol>
    <table>
       <tr>
@@ -24,26 +25,31 @@
       <th>country</th>
       </tr>
       <tr>
-         <td>perfectscalesales&sevices</td>
-         <td>perfectscalesales</td>
+         <td>freezeria cafe</td>
+         <td>freezeria cafe&tea</td>
          <td>india</td>
       </tr>
       <tr>
-         <td>yahyapersonaltutionclasses</td>
-         <td>yahyaclasses</td>
+         <td>ur choice bakery</td>
+         <td>ur choice</td>
          <td>india</td>
       </tr>
 
   
    </table>
    </table>
-   <h1>date of birth-29/07/2005</h1>
-   <h2 style="color: rgb(255, 8, 8);">pincode-390019</h2>
+   <h1>HTML entity example</h1>
+   <h2>-- ®	registered trademark	&reg;	&#174;
+</h2>
+   <h3>date of birth-29/07/2005</h3>
+   <h4 style="color: rgb(255, 8, 8);">pincode-390019</h4>
    <pre> this is 
                my first 
             html code
    </pre>
-   <h3>age-20</h3><hr>
+   <h5>age-20</h5><hr>
+   <h6>my first emoji</h6>
+   <p>&#128512;</p>
    <p title="coder">address 102,haidery<i class="fa-brands fa-google"></i> <br>
       <i class="fa-brands fa-google-pay"></i>
       <i class="fa-brands fa-google-wallet"></i>
@@ -53,8 +59,29 @@
    <p>gujarat</p>
    <p>father's name:-MAZAHIR</p>
    <p>mother's name:-SINWAN</p>
+   <p>I will display &euro;</p>
+   <p>I will display &#8364;</p>
+   <p>I will display &#x20AC;</p>
+   
    <a href="./https://www.youtube.com/watch?v=IHV3GiMgwHI" target="_blank">MY VIDEO</a>
    <a href="./1000037942.jpg" download="shoe">shoes</a>
    <img src="./Luxury Fashion Brand Logo with Gold Accents.jpg" alt="logo">
+
+   
+<video width="320" height="240" controls>
+<source src="movie2.mp4" type="video/mp4">
+
+<p>I will display &euro;</p>
+<p>I will display &#8364;</p>
+
+<div style="background-color: #006eff;">
+   <h1>yahya classes</h1>
+   <p>form</p>
+      
+</div>
+
+
+<input type="date">
+<input type="number">
 </body>
 </html>
