--- a/css2.html
+++ b/css2.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>documnets</title>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <style>
+table,th,td{
+    border: 5px solid rgb(17, 0, 255);
+    border-collapse: collapse;
+    padding: 20px;
+    text-align: center;
+}
 
+ul{
+     list-style:none;
+}
+
+a{
+    text-decoration: none;
+}
+i{
+    font-size: 50px blue color;
+}
 div{
     border: 2px solid green;
     padding-top: 60px;
@@ -18,18 +36,74 @@ div{
     height: 200px;
   min-width: 1000px;
   outline: 1px solid rgb(0, 255, 13);
-   border: 1px solid red;
+   border: 1px solid rgb(0, 4, 255);
    outline-offset: 3px;
 }
 
 h1{
-   text-decoration: wavy underline rgb(255, 166, 0);
+   text-decoration:none rgb(255, 166, 0);
+}
+
+p{
+    text-transform: lowercase;
+    text-indent: 100px;
+    letter-spacing: 5px;
+    word-spacing: 30px;
+    line-height: 40px;
+     white-space: normal;
+    text-shadow: 30px 0px 0px rgb(255, 0, 255); 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: bold;
+    font-weight: 200;
+    text-align: justify;
 }
 
 </style>
 <body>
+<h2>add a border to a table</h2>
+<table>
+    <tr>
+        <th>firstname</th>
+        <th>lastname</th>
+        <th>age</th>
+        <th>sex</th>
+    </tr>
+    <tr>
+        <td>amaanali</td>
+        <td>popatwala</td>
+        <td>20</td>
+        <td>male</td>
+    </tr>
+    <tr>
+        <td>mazahir</td>
+        <td>popatwala</td>
+        <td>40</td>
+        <td>male</td>
+    </tr>
+    <tr>
+        <td>maymana</td>
+        <td>popatwala</td>
+        <td>14</td>
+        <td>female</td>
+    </tr>
+    <tr>
+        <td>sinwan</td>
+        <td>popatwala</td>
+        <td>35</td>
+        <td>female</td>
+    </tr>
+</table>
+    <span style="cursor: auto;"auto;></span><br>
+<ul>
+<li>Coffee</li>
+<li>Tea</li>
+<li>Coca Cola</li>
+</ul>
+<a href="https://www.codewithharry.com" target="blank">This is a link</a>
+    
+<i class="glyphicon glyphicon-cloud"></i>
     <div>
-        <h1>AMAANALI</h1>
-    </div>
-</body>
+        <h1>The oldest classical British and Latin writings had little or no space between words and could be written in boustrophedon (alternating directions). Over time, text direction (left to right) became standardized. Word dividers and terminal punctuation became common. The first way to divide sentences into groups was the original paragraphos, similar to an underscore at the beginning of the new group.[1] The Greek parágraphos evolved into the pilcrow (¶), which in English manuscripts in the Middle Ages can be seen inserted inline between sentences. </h1>
+        <p>The oldest classical British and Latin writings had little or no space between words and could be written in boustrophedon (alternating directions). Over time, text direction (left to right) became standardized. Word dividers and terminal punctuation became common. The first way to divide sentences into groups was the original paragraphos, similar to an underscore at the beginning of the new group.[1] The Greek parágraphos evolved into the pilcrow (¶), which in English manuscripts in the Middle Ages can be seen inserted inline between sentences. </p>  
+        </div>      
 </html>
